--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     container: node:12
     steps:
-        name: Checkout reposistório
+      - name: Checkout reposistório
         uses: actions/checkout@v2
       - name: Instalar dependências do projeto
         run: npm ci
