--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,12 @@ jobs:
         name: Enviar relatório dos testes com sucesso
         if: ${{ success() }}
         run: | 
-          ./cc-test-reporter format-coverage -t lcov --prefix ${GITHUB_SHA}
-          ./cc-test-reporter after-build --exit-code 0
+          ./cc-test-reporter format-coverage -t lcov -o ${{github.workspace}}/coverage/codeclimate.json ${{github.workspace}}/coverage/lcov.info
+          ./cc-test-reporter upload-coverage
       - id: test-reporter-failure
         name: Enviar relatório dos testes com falha
         if: ${{ failure() }}
-        run: ./cc-test-reporter after-build --prefix ${GITHUB_SHA} --exit-code 1
+        run: | 
+          ./cc-test-reporter format-coverage -t lcov -o ${{github.workspace}}/coverage/codeclimate.json ${{github.workspace}}/coverage/lcov.info
+          ./cc-test-reporter upload-coverage
   
