--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,14 @@ jobs:
         name: Enviar relatório dos testes com sucesso
         if: ${{ success() }}
         run: | 
-          ./cc-test-reporter format-coverage -t lcov -o ${{github.workspace}}/coverage/codeclimate.json ${{github.workspace}}/coverage/lcov.info
+          ls -la
+          ./cc-test-reporter format-coverage -d -t lcov -o ${{github.workspace}}/coverage/codeclimate.json ${{github.workspace}}/coverage/lcov.info
           ./cc-test-reporter upload-coverage
       - id: test-reporter-failure
         name: Enviar relatório dos testes com falha
         if: ${{ failure() }}
         run: | 
-          ./cc-test-reporter format-coverage -t lcov -o ${{github.workspace}}/coverage/codeclimate.json ${{github.workspace}}/coverage/lcov.info
+          ls -la
+          ./cc-test-reporter format-coverage -d -t lcov -o ${{github.workspace}}/coverage/codeclimate.json ${{github.workspace}}/coverage/lcov.info
           ./cc-test-reporter upload-coverage
   
