--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
           ./cc-test-reporter before-build
+          ./cc-test-reporter env
       - id: test-runner
         name: Executar testes
         run: npm test
@@ -28,6 +29,9 @@ jobs:
         env:
           GIT_COMMIT_SHA: ${{github.sha}}
           GIT_BRANCH: master
-        run: ./cc-test-reporter after-build --debug -t lcov --exit-code 0
+        run: |
+          ./cc-test-reporter env
+          ./cc-test-reporter show-coverage
+          ./cc-test-reporter after-build --debug -t lcov --exit-code 0
           
   
